--- a/package.json
+++ b/package.json
@@ -22,6 +22,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "jest": "^29.6.2"
-  }
+    "jest": "^29.6.2",
+    "node-fetch": "^2.7.0"
+  },
+  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SamCaro/DEV008-md-links.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SamCaro/DEV008-md-links/issues"
+  },
+  "homepage": "https://github.com/SamCaro/DEV008-md-links#readme"
 }
