--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "jest": "^29.6.2",
+    "md-links-samcaro": "^0.3.4",
     "node-fetch": "^2.7.0"
   },
   "keywords": [],
@@ -37,5 +38,4 @@
   "bin": {
     "cli": "cli.js"
   }
-  
 }
